[gd_scene load_steps=2 format=3 uid="uid://agent_sfx_dock"]

[ext_resource type="Script" path="res://addons/agent-sfx/dock.gd" id="1_dock"]

[node name="AgentSFXDock" type="Control"]
layout_mode = 3
size_flags_vertical = 3
script = ExtResource("1_dock")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopPanel" type="Panel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/TopPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TopPanel/VBoxContainer2"]
layout_mode = 2

[node name="AnalyzeButton" type="Button" parent="VBoxContainer/TopPanel/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Analyze Code"

[node name="ProgressLabel" type="Label" parent="VBoxContainer/TopPanel/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ready to analyze"

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer/TopPanel/VBoxContainer2"]
visible = false
layout_mode = 2
max_value = 100.0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ResultsContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ReviewPanel" type="Panel" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ReviewPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ReviewPanel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ReviewPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Review Sound Suggestions:"
theme_override_font_sizes/font_size = 16

[node name="SuggestionsList" type="VBoxContainer" parent="VBoxContainer/ReviewPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GenerateButton" type="Button" parent="VBoxContainer/ReviewPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Generate Audio Files"

